RESOLVED FIXED187164
Find in page for typographic quotes does not find low (German) quotes
https://bugs.webkit.org/show_bug.cgi?id=187164
Summary Find in page for typographic quotes does not find low (German) quotes
Olivia Barnett
Reported 2018-06-28 17:01:51 PDT
Find in page for typographic quotes does not find straight quotes
Attachments
Patch (6.24 KB, patch)
2018-06-28 17:16 PDT, Olivia Barnett
no flags
Patch (6.26 KB, patch)
2018-06-28 17:45 PDT, Olivia Barnett
no flags
Patch (6.37 KB, patch)
2018-06-28 17:56 PDT, Olivia Barnett
no flags
Olivia Barnett
Comment 1 2018-06-28 17:16:51 PDT
Tim Horton
Comment 2 2018-06-28 17:18:59 PDT
Comment on attachment 343874 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=343874&action=review > Source/WebCore/editing/TextIterator.cpp:1780 > + string.replace(leftLowDoubleQuotationMark, '"'); Are there no /right/ low quotes?
Olivia Barnett
Comment 3 2018-06-28 17:19:23 PDT
Olivia Barnett
Comment 4 2018-06-28 17:21:25 PDT
I looked here and didn't find any "right" low quotation marks. https://en.wikipedia.org/wiki/Quotation_mark#Unicode_code_point_table I think in German it is low then high.
Tim Horton
Comment 5 2018-06-28 17:22:04 PDT
Comment on attachment 343874 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=343874&action=review > Source/WTF/ChangeLog:3 > + Find in page for typographic quotes does not find straight quotes I think this title is about something different than what you're fixing, right? This is about curly vs. straight, which seems like it already works, maybe?
Olivia Barnett
Comment 6 2018-06-28 17:29:25 PDT
Yeah, you are right -- that functionality works. For some reason this was the radar post name even though the bug seems different. Should I change the name?
Tim Horton
Comment 7 2018-06-28 17:32:11 PDT
(In reply to Olivia Barnett from comment #6) > Yeah, you are right -- that functionality works. For some reason this was > the radar post name even though the bug seems different. Should I change the > name? Definitely!
Olivia Barnett
Comment 8 2018-06-28 17:45:56 PDT
Tim Horton
Comment 9 2018-06-28 17:47:11 PDT
Comment on attachment 343877 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=343877&action=review > Source/WTF/ChangeLog:5 > + Radar URL should go on the line below the bugs.webkit.org URL.
Olivia Barnett
Comment 10 2018-06-28 17:56:48 PDT
WebKit Commit Bot
Comment 11 2018-06-28 18:19:58 PDT
Comment on attachment 343878 [details] Patch Clearing flags on attachment: 343878 Committed r233345: <https://trac.webkit.org/changeset/233345>
WebKit Commit Bot
Comment 12 2018-06-28 18:19:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.