Find in page for typographic quotes does not find low (German) quotes https://bugs.webkit.org/show_bug.cgi?id=187164 <rdar://problem/29612785> Source/WebCore:

Patch by Olivia Barnett <obarnett@apple.com> on 2018-06-28
Reviewed by Tim Horton.

Added additional quote test to LayoutTests/fast/text/find-quotes.html.

Added functionality to replace German quotes when matching.

* editing/TextIterator.cpp:
(WebCore::foldQuoteMark):
(WebCore::foldQuoteMarks):

Source/WTF:

Patch by Olivia Barnett <obarnett@apple.com> on 2018-06-28
Reviewed by Tim Horton.

Added Unicode definitions for German quotation marks.

* wtf/unicode/CharacterNames.h:

LayoutTests:

Patch by Olivia Barnett <obarnett@apple.com> on 2018-06-28
Reviewed by Tim Horton.

Added additional test for German quotes.

* fast/text/find-quotes.html:

Canonical link: https://commits.webkit.org/202430@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233345 268f45cc-cd09-0410-ab3c-d52691b4dbfc